# dual_arm_robot

./: README.md
catkin_ws/devel/: _setup_util.py
catkin_ws/devel/include/astra_camera/: AstraConfig.h  UVCCameraConfig.h
catkin_ws/devel/include/find_object_2d/: DetectionInfo.h  ObjectsStamped.h
catkin_ws/devel/include/tensorflow_object_detector/: Location.h
catkin_ws/devel/include/vision_msgs/: BoundingBox2D.h  BoundingBox3D.h  BoundingBox3DArray.h  Classification2D.h  Classification3D.h  Detection2D.h  Detection2DArray.h  Detection3D.h  Detection3DArray.h  ObjInfo.h  ObjectHypothesis.h  ObjectHypothesisWithPose.h  VisionInfo.h
catkin_ws/devel/include/wayPoints/: Location.h
catkin_ws/devel/lib/CamToBaseTrans/: CamToBase
catkin_ws/devel/lib/astra_camera/: astra_camera_node  astra_list_devices  astra_test_wrapper  camera_node
catkin_ws/devel/lib/find_object_2d/: find_object_2d  tf_example
catkin_ws/devel/lib/pkgconfig/: CamToBaseTrans.pc  Dsc5.pc  astra_camera.pc  dscr5_6.pc  (+10 more)
catkin_ws/src/CamToBaseTrans/: CMakeLists.txt  package.xml
catkin_ws/src/CamToBaseTrans/src/: CamToBase.cpp
catkin_ws/src/Dsc5/: CMakeLists.txt
catkin_ws/src/dscr5_6/: CMakeLists.txt  urdf.rviz
catkin_ws/src/dscr5_movit_config/: .setup_assistant  CMakeLists.txt
catkin_ws/src/dual_config/: .setup_assistant  CMakeLists.txt  package.xml
catkin_ws/src/probot_demo/: CMakeLists.txt
catkin_ws/src/wayPoints/: CMakeLists.txt
catkin_ws/src/wayPoints/src/: Llistener.cpp  Lserver.cpp  Rback  Rserver (copy).cpp  Rserver.cpp  server (3rd copy).cpp  t.py
sendWayPoints/: Initial.py  MidServer.py  RobArmControl.py  ScriptT.py  test.txt  wayPoints.txt
(+197 files in other folders)
